--- a/NewsLetter_Signup/signup.html
+++ b/NewsLetter_Signup/signup.html
@@ -31,7 +31,7 @@
         </label>
       </div>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Me up!</button>
-      <p class="mt-5 mb-3 text-muted">&copy; Newsletter from Deepa Subramanian</p>
+      <p class="mt-5 mb-3 text-muted" style="color:black;">&copy; Newsletter by <i>Gaurav Chaubey<i></p>
     </form>
   </body>
 </html>
